--- a/ossweb-img/css/common.css
+++ b/ossweb-img/css/common.css
@@ -464,6 +464,9 @@ body {
 .slide-3 .slide {
   background: url("//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-dark.png") no-repeat;
 }
+.slide-3 .content {
+  width: 340px !important;
+}
 
 .slide-4 .bg {
   -webkit-transform: translateX(100%);
@@ -530,13 +533,13 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 800px;
-  height: 483px;
-  font-size: 24px;
+  width: 635px;
+  height: 383px;
+  font-size: 18px;
   background-color: #000b28;
   transform: translateY(10%);
-  margin-left: -400px;
-  margin-top: -242px;
+  margin-left: -317px;
+  margin-top: -191px;
   opacity: 0;
   transition: all 1s;
 }
@@ -546,7 +549,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 448px;
+  height: 348px;
   z-index: 999;
 }
 .envelope img {
@@ -560,11 +563,11 @@ body {
 
 .letter-paper {
   position: absolute;
-  width: 674px;
-  height: 360px;
+  width: 534px;
+  height: 300px;
   left: 50%;
-  bottom: 200px;
-  margin-left: -337px;
+  bottom: 150px;
+  margin-left: -267px;
   transform: translateY(110px);
   background-color: #fff;
   opacity: 0;
@@ -598,13 +601,13 @@ body {
 }
 
 .mentor {
-  width: 630px;
-  height: 540px;
+  width: 500px;
+  height: 440px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -270px;
-  margin-left: -315px;
+  margin-top: -220px;
+  margin-left: -250px;
   transform: translateY(10%);
 }
 .mentor .mentor-1,
@@ -615,8 +618,8 @@ body {
   position: absolute;
   float: left;
   overflow: hidden;
-  width: 180px;
-  height: 225px;
+  width: 140px;
+  height: 174px;
   opacity: 0;
   -webkit-transform: translateY(10px);
   transform: translateY(10px);
@@ -641,7 +644,7 @@ body {
   height: 60px;
   display: none;
   color: #fff;
-  font-size: 16px;
+  font-size: 12px;
   background-color: rgba(19, 111, 228, 0.8);
   cursor: pointer;
   line-height: 24px;
@@ -663,14 +666,14 @@ body {
 .mentor .mentor-3 .person .name,
 .mentor .mentor-4 .person .name,
 .mentor .mentor-5 .person .name {
-  font-size: 18px;
+  font-size: 14px;
 }
 .mentor .mentor-1 .person .intor,
 .mentor .mentor-2 .person .intor,
 .mentor .mentor-3 .person .intor,
 .mentor .mentor-4 .person .intor,
 .mentor .mentor-5 .person .intor {
-  font-size: 16px;
+  font-size: 12px;
 }
 .mentor .mentor-1:hover,
 .mentor .mentor-2:hover,
